# simple-firewall

./: .dir-locals.el  Cargo.toml  LICENSE  README.md  fwcfg.yaml  sfw.toml  sfwconfig.toml
.cargo/: config.toml  rust-analyzer.toml
sfw/: Cargo.toml
sfw/src/: build_ebpf.rs  install.rs  main.rs  run.rs
simple-firewall/: Cargo.toml
simple-firewall-common/: Cargo.toml
simple-firewall-common/src/: lib.rs
simple-firewall-ebpf/: Cargo.toml  rust-toolchain.toml
simple-firewall-ebpf/.nvim/: settings.json
simple-firewall-ebpf/src/: binding.rs  cpus.rs  helper.rs  main.rs
simple-firewall-ebpf/src/tc/: egress.rs
simple-firewall-ebpf/src/xdp/: ingress.rs
simple-firewall/src/: helper.rs  main.rs
xtask/src/: run.rs
