[package]
name = "simple-firewall-ebpf"
version = "0.1.2"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
simple-firewall-common = { path = "../simple-firewall-common" }
network-types = "0.0.6"

[[bin]]
name = "sfw"
test = false
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
