[package]
name = "simple-firewall"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
simple-firewall-common = { path = "../simple-firewall-common", features = ["user"] }
anyhow = "1"
# env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "sync"] }
figment = { version = "0.10.19", features = ["toml"] }
network-types = "0.0.7"
bytes = "1.6.0"
serde = { version = "1.0.204", features = ["derive"] }
log4rs = "1.3.0"


[[bin]]
name = "sfw"
path = "src/main.rs"
